// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`components/view_image/ImagePreview should match snapshot, with preview 1`] = `
<div>
  <a
    class="image_preview"
    href="#"
  >
    <img
      alt="preview url image"
      class="image_preview__image"
      data-testid="imagePreview"
      draggable="false"
      loading="lazy"
      src="/api/v4/files/file_id_1/preview"
    />
  </a>
</div>
`;

exports[`components/view_image/ImagePreview should match snapshot, with preview, cannot download 1`] = `
<div>
  <span
    class="image_preview"
  >
    <img
      class="image_preview__image"
      draggable="false"
      src="/api/v4/files/file_id_1/preview"
    />
  </span>
</div>
`;

exports[`components/view_image/ImagePreview should match snapshot, without preview 1`] = `
<div>
  <a
    class="image_preview"
    href="#"
  >
    <img
      alt="preview url image"
      class="image_preview__image"
      data-testid="imagePreview"
      draggable="false"
      loading="lazy"
      src="/api/v4/files/file_id?download=1"
    />
  </a>
</div>
`;

exports[`components/view_image/ImagePreview should match snapshot, without preview, cannot download 1`] = `
<div>
  <span
    class="image_preview"
  >
    <img
      class="image_preview__image"
      draggable="false"
      src="/api/v4/files/file_id?download=1"
    />
  </span>
</div>
`;
